prevent main panel overflow on tablet horizontal, add GA event for beta opt out

--- a/src/app/core/components/main/main.component.scss
+++ b/src/app/core/components/main/main.component.scss
@@ -38,6 +38,7 @@
 
   .main-panel {
     flex: 1 1 auto;
+    max-width: calc(100% - #{$left-menu-width});
     display: flex;
     flex-direction: column;
   }
