--- a/src/app/file-browser/components/file-list-item/file-list-item.component.scss
+++ b/src/app/file-browser/components/file-list-item/file-list-item.component.scss
@@ -115,6 +115,7 @@ $grid-info-section-height: $action-button-height + 2 * $grid-info-section-margin
   i {
     flex: 0 0 auto;
     margin-left: 10px;
+    margin-right: 10px;
   }
 
   .second-row {
